
Version 0.23
xx-xx-xx Adrian Rossiter <adrian@antiprism.com>
         New Programs
            iso_kite: isohedral kite-faced polyhedra
         Changes
            floating point arguments can be mathematical expressions
              (sqrt prefix removed, use sqrt() instead)
            Symmetry: symmetry alignment should not realign an
              aligned polyhedron
         Fixes

Version 0.22
22-10-12 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            None
         Changes
            Resource models: element index numbers may have changed. 
            Uniform polyhedra (U models) calculated by formula
              rather than "kaleido" code (Roger Kaufman)
            Standard uniform models use new U models, many resource
               models may be prefixed by std_ (Roger Kaufman).
            New resource models: Wythoff construction (wythoff_ ),
               Schwarz triangle (schwarz_), regular polygon (pol)
            lat_util: -R takes extra blending option
            off_util: -b default is rgb
            planar: various option changes and new options
         Fixes
            Some Johnson polyhedra not connected correctly
            Some errors reading OFF files were not reported
            Finds OpenGL headers on OS X (untested)
            Portability of timing code
            Other small fixes.



Version 0.21
26-03-12 Adrian Rossiter <adrian@antiprism.com>
         New Programs
            off_normals: new program for working with normals (Roger
              Kaufman)
            leonardo: creates Leonardo da Vinci style models
         Changes
            off_query: Vg for vertex figures (Vn for connections only)
            off_report: windings of vertex figures added, more
              connectivity information
            off_util: -O takes an argument, -t 'triangulate' is synonym
              for nonzero, abs_geq_two removed
            conv_hull: hulls are positively oriented. Better check for