@@ -423,6 +423,9 @@ const char *help_johnson =
 "\n"
 "    e.g. j_elongated_triangular_pyramid, j_el_tri_pyr, j_el\n"
 "\n"
+"The Johnson polyhedron will be aligned with its symmetry group, but\n"
+"appending '_raw' to the name will preserve the original construction\n"
+"alignment.\n"
 "\n"
 "Johnson List:\n"
 "\n"
